--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
     <nav>
       <a href= "index.html">home </a>
       <a href= " about.html"> About</a>
-<h1> My name is Simrah </h1>
+<h1> My name is Hajra! </h1>
     <p Hello! </p>
