--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@
       <a href= "index.html">home </a>
       <a href= " about.html"> About</a>
 <h1> My name is Hajra! </h1>
-    <p Hello! </p>
+    <p>I like bread</p>
